Updating login and register views

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -79,18 +79,18 @@
                         <p class="text-center">
                             Connect to the huge community of AatmaNiti with just a click!
                         </p>
-                        <form action="">
+                        <form action="/login" method="POST">
                             <div class="mb-3">
                                 <label for="name" class="form-label">Username</label>
-                                <input type="text" class="form-control" name="name" id="name" placeholder="Username">
+                                <input type="text" class="form-control" name="username" placeholder="Username">
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Password</label>
-                                <input type="text" class="form-control" name="email" id="email" placeholder="xxxx xxxx">
+                                <input type="password" class="form-control" name="password" placeholder="xxxx xxxx">
                             </div>
-                            <div class="btn btn-block btn-primary">
+                            <button class="btn btn-block btn-primary">
                                 Sign In
-                            </div>
+                            </button>
                         </form>
                     </div>
                 </div>
