--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
     <div class="container" id="mainContainer">
         <h1 class="well" id="formHead">Sign Up</h1>
 
-        <form action="/user" method="POST">
+        <form action="/user/new" method="POST">
             <div class="row">
                 <div class="col-sm-6 form-group">
                     <label>First Name</label>
