--- a/public/stylesheets/programsAndEvents.css
+++ b/public/stylesheets/programsAndEvents.css
@@ -4,6 +4,7 @@
          body, html {
           margin-top: 50px;
           font-family: Arial;
+          background-image: linear-gradient(to top, #cd9cf2 0%, #f6f3ff 100%);
         } 
         
         /* Style tab links */
@@ -12,13 +13,12 @@
           background-color: rgb(255, 255, 255);
           color: rgb(0, 0, 0);
           float: left;
-          border-radius: 20px 20px 0px 0px;
-          border-bottom: none;
-          outline: none;
+          border: none;
           cursor: pointer;
           padding: 14px 16px;
           font-size: 17px;
-          width: 25%;
+          font-weight: 600;
+          width: 49%;
         }
         
         /* .tablink:hover {
@@ -60,9 +60,6 @@
             flex-direction: column;
             margin: 20px;
             margin-bottom: 30px;
-            -webkit-border-radius: 10px;
-            -moz-border-radius: 10px;
-            border-radius: 10px;
             overflow: hidden;
             background-position: center center;
             background-size: cover;
@@ -207,3 +204,8 @@
           h1 {
             margin: 10px 20px;
           }
+
+          .carousel-inner .carousel-item img {
+            height: 36em;
+            object-fit: cover;
+        }
