--- a/views/programsAndEvents.ejs
+++ b/views/programsAndEvents.ejs
@@ -1,8 +1,92 @@
 <%- include('./partials/header') %>
     <link rel="stylesheet" type="text/css" href="/stylesheets/programsAndEvents.css"></link>
         
-        <button class="tablink" onclick="openPage('Programs', this, '#ff99ff')">Programs</button>
-        <button class="tablink" onclick="openPage('Events', this, '#ff99ff')" id="defaultOpen">Events</button>
+    <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+      <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      </ol>
+      <div class="carousel-inner">
+          <div class="carousel-item active" data-interval="4000" data-pause="false">
+            <div class="container">
+              <div class="row justify-content-between align-items-center">
+                  <div class="col-lg-5" id="descriptive">
+                      <div class="contents d-flex flex-column justify-content-around">
+                          <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What business are you?</h5>
+                          <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
+                              Main hero message to sell yourself
+                          </h1>
+                          <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(134, 134, 134);">
+                              Sub hero message lead. How would you benefit the customer. Short and crisp.
+                          </h5>
+                      </div>
+                  </div>
+                  <div class="col-lg-5 mt-3 mt-lg-0" id="illustration">
+                      <div class="row justify-content-center align-items-center">
+                          <img class="img-fluid" src="https://www.goodreturns.in/img/600x90/2016/04/women-29-1461910897.jpg" alt="">
+                      </div>
+                  </div>
+              </div>
+          </div>
+          </div>
+          <div class="carousel-item" data-interval="4000" data-pause="false">
+            <div class="container">
+              <div class="row justify-content-between align-items-center">
+                <div class="col-lg-5 mt-3 mt-lg-0" id="illustration">
+                  <div class="row justify-content-center align-items-center">
+                      <img class="img-fluid" src="https://img.huffingtonpost.com/asset/5dd0e3bd210000406834d2b7.jpeg?ops=scalefit_970_noupscale" alt="">
+                  </div>
+              </div>
+                  <div class="col-lg-5" id="descriptive">
+                      <div class="contents d-flex flex-column justify-content-around">
+                          <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What business are you?</h5>
+                          <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
+                              Main hero message to sell yourself
+                          </h1>
+                          <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(134, 134, 134);">
+                              Sub hero message lead. How would you benefit the customer. Short and crisp.
+                          </h5>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          </div>
+          <div class="carousel-item" data-interval="4000" data-pause="false">
+            <div class="container">
+              <div class="row justify-content-between align-items-center">
+                  <div class="col-lg-5" id="descriptive">
+                      <div class="contents d-flex flex-column justify-content-around">
+                          <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What business are you?</h5>
+                          <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
+                              Main hero message to sell yourself
+                          </h1>
+                          <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(134, 134, 134);">
+                              Sub hero message lead. How would you benefit the customer. Short and crisp.
+                          </h5>
+                      </div>
+                  </div>
+                  <div class="col-lg-5 mt-3 mt-lg-0" id="illustration">
+                      <div class="row justify-content-center align-items-center">
+                          <img class="img-fluid" src="https://thelogicalindian.com/h-upload/2020/09/11/181461-motherweb.jpg" alt="">
+                      </div>
+                  </div>
+              </div>
+          </div>
+          </div>
+          <a href="#carouselExampleIndicators" class="carousel-control-prev carousel1-control-prev" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+          <a href="#carouselExampleIndicators" class="carousel-control-next carousel1-control-next" role="button" data-slide="next">
+              <span class="carousel-control-next-icon"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div>
+  </div>
+        <button class="tablink" onclick="openPage('Programs', this, '#7e57a4')">PROGRAMS</button>
+        <button class="tablink" onclick="openPage('Events', this, '#7e57a4')" id="defaultOpen">EVENTS</button>
         
         <div id="Programs" class="tabcontent">
             <ul>
