--- a/public/stylesheets/programsAndEvents.css
+++ b/public/stylesheets/programsAndEvents.css
@@ -2,7 +2,7 @@
         
         /* Set height of body and the document to 100% */
          body, html {
-          margin-top: 50px;
+          /* margin-top: 50px; */
           font-family: Arial;
         } 
         
