--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,56 +1,8 @@
 <%- include('./partials/header') %>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/home.css"></link>
-
-    <section class="section-content-block">
-        <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-interval="4000" data-pause="false">
-                    <img src="/assets/carousel1.jpg" class="d-block w-100" alt="Slide1">
-                    <div class="carousel-caption d-none d-md-block">
-                        <blockquote class="blockquote text-right">
-                            <p>These fingers of mine, they got brains in ’em. You don’t tell them what to do – they do it.
-                            </p>
-                            <footer class="blockquote-footer text-right">Jerry Lee Lewis</footer>
-                        </blockquote>
-                    </div>
-                </div>
-                <div class="carousel-item" data-interval="4000" data-pause="false">
-                    <img src="/assets/carousel2.jpg" class="d-block w-100" alt="Slide2">
-                    <div class="carousel-caption d-none d-md-block">
-                        <p>Music is the wine that fills the cup of silence.</p>
-                    </div>
-                </div>
-                <div class="carousel-item" data-interval="4000" data-pause="false">
-                    <img src="/assets/carousel3.jpg" class="d-block w-100" alt="Slide3">
-                    <div class="carousel-caption d-none d-md-block">
-                        <p>Life is one grand sweet song so start the music.</p>
-                    </div>
-                </div>
-                <div class="carousel-item" data-interval="4000" data-pause="false">
-                    <img src="/assets/carousel4.jpg" class="d-block w-100" alt="Slide4">
-                    <div class="carousel-caption d-none d-md-block">
-                        <div class="row justify-content-start">
-                            <p>Music is life itself . . .</p>
-                        </div>
-                    </div>
-                </div>
-                <a href="#carouselExampleIndicators" class="carousel-control-prev carousel1-control-prev" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a href="#carouselExampleIndicators" class="carousel-control-next carousel1-control-next" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-    </section>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/home.css">
+    </link>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/sbuttons.min.css">
+    </link>
 
     <section class="section-content-block">
         <!-- <div class="position-absolute h-100 w-100" style="
@@ -93,11 +45,74 @@
     </section>
 
     <section class="section-content-block">
+        <div class="d-flex justify-content-center align-items-center">
+            <button class='sbtn gradient-btn white-btn'>Show all users</button>
+        </div>
+    </section>
+
+    <section class="section-content-block">
+        <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="4000" data-pause="false">
+                    <img src="/assets/carousel1.jpg" class="d-block w-100" alt="Slide1">
+
+                </div>
+                <div class="carousel-item" data-interval="4000" data-pause="false">
+                    <img src="/assets/carousel2.jpg" class="d-block w-100" alt="Slide2">
+                    <!-- <div class="carousel-caption d-none d-md-block">
+                        <p>Music is the wine that fills the cup of silence.</p>
+                    </div> -->
+                </div>
+                <div class="carousel-item" data-interval="4000" data-pause="false">
+                    <img src="/assets/carousel3.jpg" class="d-block w-100" alt="Slide3">
+                    <!-- <div class="carousel-caption d-none d-md-block">
+                        <p>Life is one grand sweet song so start the music.</p>
+                    </div> -->
+                    <div class="carousel-caption d-none d-md-block">
+                        <blockquote class="blockquote text-right">
+                            <p>These fingers of mine, they got brains in ’em. You don’t tell them what to do – they do
+                                it.
+                            </p>
+                            <footer class="blockquote-footer text-right">Jerry Lee Lewis</footer>
+                        </blockquote>
+                    </div>
+                </div>
+                <div class="carousel-item" data-interval="4000" data-pause="false">
+                    <img src="/assets/carousel4.jpg" class="d-block w-100" alt="Slide4">
+                    <!-- <div class="carousel-caption d-none d-md-block">
+                        <div class="row justify-content-start">
+                            <p>Music is life itself . . .</p>
+                        </div>
+                    </div> -->
+                </div>
+                <a href="#carouselExampleIndicators" class="carousel-control-prev carousel1-control-prev" role="button"
+                    data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a href="#carouselExampleIndicators" class="carousel-control-next carousel1-control-next" role="button"
+                    data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-content-block">
         <div class="container" id="testimonials">
             <div class="box">
                 <div class="content">
                     <img src="/assets/quotePic.png" alt="" class="quote_pic">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam atque animi delectus vel officiis quo aspernatur, ad optio, hic, possimus eos nostrum magni ullam deleniti? Nesciunt incidunt sunt commodi.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam atque animi delectus vel
+                        officiis quo aspernatur, ad optio, hic, possimus eos nostrum magni ullam deleniti? Nesciunt
+                        incidunt sunt commodi.</p>
                     <img src="/assets/user1.jpg" width="80px" height="80px" alt="" class="user">
                     <h3>Jyoti Verma</h3>
                 </div>
@@ -105,7 +120,9 @@
             <div class="box">
                 <div class="content">
                     <img src="/assets/quotePic.png" alt="" class="quote_pic">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam atque animi delectus vel officiis quo aspernatur, ad optio, hic, possimus eos nostrum magni ullam deleniti? Nesciunt incidunt sunt commodi.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam atque animi delectus vel
+                        officiis quo aspernatur, ad optio, hic, possimus eos nostrum magni ullam deleniti? Nesciunt
+                        incidunt sunt commodi.</p>
                     <img src="/assets/user2.jpg" width="80px" height="80px" alt="" class="user">
                     <h3>Shakshi Malik</h3>
                 </div>
@@ -113,7 +130,9 @@
             <div class="box">
                 <div class="content">
                     <img src="/assets/quotePic.png" alt="" class="quote_pic">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam atque animi delectus vel officiis quo aspernatur, ad optio, hic, possimus eos nostrum magni ullam deleniti? Nesciunt incidunt sunt commodi.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam atque animi delectus vel
+                        officiis quo aspernatur, ad optio, hic, possimus eos nostrum magni ullam deleniti? Nesciunt
+                        incidunt sunt commodi.</p>
                     <img src="/assets/user3.jpg" width="80px" height="80px" alt="" class="user">
                     <h3>Zoe Benny</h3>
                 </div>
@@ -124,7 +143,8 @@
     <section class="section-content-block">
         <div id="quotation">
             <blockquote class="blockquote text-center">
-                <p><span>“ </span>Feminism isn’t about making women strong . Women are already strong . It’s about changing the way the world perceives that strength .<span>”</span></p>
+                <p><span>“ </span>Feminism isn’t about making women strong . Women are already strong . It’s about
+                    changing the way the world perceives that strength .<span>”</span></p>
                 <!-- <footer class="blockquote-footer text-right">Jerry Lee Lewis</footer> -->
             </blockquote>
         </div>
