--- a/views/register.ejs
+++ b/views/register.ejs
@@ -42,6 +42,10 @@
                 <label>Phone Number</label>
                 <input type="text" name="phone" placeholder="Enter Phone Number Here.." class="form-control">
             </div>
+            <div class="form-group">
+                <label>Image Url</label>
+                <input type="text" name="image" placeholder="Your Image url from any online hosting site..." class="form-control">
+            </div>
 
             <div class="form-group">
                 <label>Email Address</label>
