--- a/views/user.ejs
+++ b/views/user.ejs
@@ -8,7 +8,7 @@
             <% users.forEach(function(user){ %>
                 <li class="cards_item">
                     <div class="card">
-                        <div class="card_image"><img src="https://www.eharmony.com/blog/wp-content/uploads/2017/07/short-men-and-dating-e1499470604767.jpg"></div>
+                        <div class="card_image"><img src="<%= user.image %>"></div>
                         <div class="card_content">
                             <h2 class="card_title">
                                 <%= user.firstName %>
