--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -11,7 +11,7 @@
             <div class="media clearfix">
                 <div class="media-left pr30">
                     <a href="#">
-                        <img class="media-object mw150" src="https://avatars.githubusercontent.com/u/58398802?s=400&u=b2af68e1dc50e8390009e0a4202488e2756d0f26&v=4" alt="..." style="height: 15rem;width: 12rem;">
+                        <img class="media-object mw150" src="<%= user.image %>" alt="..." style="height: 15rem;width: 12rem;">
                     </a>
                 </div>
                 <div class="media-body va-m" style="padding-top: 4rem;">
