--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,8 +20,11 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-5" id="descriptive">
                     <div class="contents d-flex flex-column justify-content-around">
-                        <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What business are you?</h5>
-                        <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
+                        <h5 class="mb-4"
+                            style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What
+                            business are you?</h5>
+                        <h1 class="mb-4 mt-2 font-weight-bold"
+                            style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
                             Main hero message to sell yourself
                         </h1>
                         <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(134, 134, 134);">
@@ -44,7 +47,7 @@
 
     <section class="section-content-block">
         <div class="d-flex justify-content-center align-items-center">
-            <button class='sbtn gradient-btn white-btn'>Show all users</button>
+            <button class='sbtn gradient-btn purple-btn rounded-btn'>Show all users</button>
         </div>
     </section>
 
@@ -62,7 +65,7 @@
 
                 </div>
                 <div class="carousel-item" data-interval="4000" data-pause="false">
-                    <img src="/assets/carousel2.jpg" class="d-block w-100" alt="Slide2">
+                    <img src="/assets/carousel2.JPG" class="d-block w-100" alt="Slide2">
                     <!-- <div class="carousel-caption d-none d-md-block">
                         <p>Music is the wine that fills the cup of silence.</p>
                     </div> -->
@@ -133,6 +136,40 @@
                         incidunt sunt commodi.</p>
                     <img src="/assets/user3.jpg" width="80px" height="80px" alt="" class="user">
                     <h3>Zoe Benny</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-content-block">
+        <div class="row margin-bottom-11" id="vision">
+            <div class="text-center">
+                <h2 class="mb-4"><strong>Our Vision</strong></h2>
+                <p>A world where every woman is able to use her voice, make her own decisions, and engage in economic
+                    opportunities.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-content-block">
+        <div class="container">
+
+            <div class="container">
+                <div class="row justify-content-around align-items-center">
+
+                    <div class="col-lg-5 order-1 mb-5" id="edits">
+                        <div class="row justify-content-center align-items-center">
+                            <iframe id="shadow-frame" allowfullscreen height="350" width="350" style="border:none;"
+                                src="https://www.youtube.com/embed/OsoRhfIB-jI"></iframe>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 order-2 mb-5" id="edits">
+                        <div class="row justify-content-center align-items-center">
+                            <iframe id="shadow-frame" allowfullscreen height="350" width="350" style="border:none;"
+                                src="https://www.youtube.com/embed/bF-TnMxTUTg"></iframe>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
