buisness cards done

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,7 +34,13 @@
                     <a class="nav-link pt-0 pb-0" href="#">English</a>
                 </li>
                 <li class="nav-item" id="lang2">
-                    <a class="nav-link pt-0 pb-0" href="#">Hindi</a>
+                    <a class="nav-link pt-0 pb-0" href="#">हिन्दी</a>
+                </li>
+                <li class="nav-item" id="lang2">
+                    <a class="nav-link pt-0 pb-0" href="#">मराठी</a>
+                </li>
+                <li class="nav-item" id="lang2">
+                    <a class="nav-link pt-0 pb-0" href="#">ਪੰਜਾਬੀ</a>
                 </li>
             </ul>
         </div>
@@ -63,7 +69,7 @@
                         <a href="/products" class="nav-link">Buy and Sell</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/services" class="nav-link">Buisness</a>
+                        <a href="/service" class="nav-link">Buisness</a>
                     </li>
                     <li class="nav-item">
                         <a href="/contact" class="nav-link">Contact</a>
@@ -89,7 +95,7 @@
             </div>
 
         </nav>
-        <div class="container" style="padding-top:5rem;">
+        <div class="container">
 
             <% if(error && error.length > 0){ %>
                 <div class="alert alert-danger" role="alert">
