--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Andika+New+Basic&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
-*, html, body {
+*,
+html,
+body {
     margin: 0;
     padding: 0;
     /* font-family: "Andika New Basic", sans-serif; */
@@ -9,6 +11,7 @@
 h1 {
     color: #58afed;
 }
+
 
 /* ===========header=========== */
 
@@ -42,6 +45,7 @@ h1 {
     width: 100% !important;
 }
 
+
 /* .sticky + .section-content-block {
     padding-top: 10rem;
 } */
@@ -57,16 +61,15 @@ h1 {
     padding: 0rem 4rem;
     box-shadow: 0rem 0.3rem 0.8rem 0.3rem #4b4848;
     font-weight: 500px;
-    height: fit-content; 
+    height: fit-content;
     background-color: #260036;
-
     transition: 0.2s;
 }
 
 #mainNavbar .navbar-brand {
     color: #ffffff;
     font-family: "Play", sans-serif;
-    font-weight: 700;
+    /*font-weight: 700;*/
     font-size: 2.5rem;
     margin: 3px 10px 5px 1px;
     padding: 2px 3px 3px 1px;
@@ -75,7 +78,7 @@ h1 {
 #mainNavbar .nav-link {
     font-family: "nunito", sans-serif;
     color: #ffffff;
-    font-weight: 600;
+    /*font-weight: 600;*/
     font-size: 1rem;
     margin: 0rem 0rem 0rem 2rem;
     padding: 8px 5px;
@@ -104,7 +107,9 @@ h1 {
     font-weight: 100px;
 }
 
-nav ul li a, nav ul li a:after, nav ul li a:before {
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before {
     transition: all .2s;
     /* text-transform: lowercase; */
 }
@@ -134,6 +139,7 @@ nav.stroke ul li a:hover:after {
     width: 3rem;
     height: 4rem;
 }
+
 
 /* Here is the code for Responsive header */
 
@@ -231,7 +237,9 @@ nav.stroke ul li a:hover:after {
     }
 }
 
+
 /* ===========header ends here=========== */
+
 
 /* ===========footer=========== */
 
@@ -256,10 +264,13 @@ footer {
     margin-top: 0px;
 }
 
-.footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right {
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
     display: inline-block;
     vertical-align: top;
 }
+
 
 /* Footer left */
 
@@ -273,6 +284,7 @@ footer {
     margin: 0;
 }
 
+
 /* The company logo */
 
 .footer-distributed .footer-left img {
@@ -283,6 +295,7 @@ footer {
     color: #aacce4;
     font-size: 1.2rem;
 }
+
 
 /* Footer links */
 
@@ -304,6 +317,7 @@ footer {
     font-weight: normal;
     margin: 0;
 }
+
 
 /* Footer Center */
 
@@ -348,6 +362,7 @@ footer {
     text-decoration: none;
 }
 
+
 /* Footer Right */
 
 .footer-distributed .footer-right {
@@ -389,12 +404,16 @@ footer {
     margin-bottom: 5px;
 }
 
+
 /* Here is the code for Responsive Footer */
+
 
 /* You can remove below code if you don't want Footer to be responsive */
 
 @media (max-width: 880px) {
-    .footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right {
+    .footer-distributed .footer-left,
+    .footer-distributed .footer-center,
+    .footer-distributed .footer-right {
         display: block;
         width: 100%;
         margin-bottom: 40px;
@@ -409,5 +428,6 @@ footer {
     width: 100px;
     height: 125px;
 }
+
 
 /* ===========footer=========== */
