--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,11 +19,8 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-5" id="descriptive">
                     <div class="contents d-flex flex-column justify-content-around">
-                        <h5 class="mb-4"
-                            style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What
-                            business are you?</h5>
-                        <h1 class="mb-4 mt-2 font-weight-bold"
-                            style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
+                        <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What business are you?</h5>
+                        <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
                             Main hero message to sell yourself
                         </h1>
                         <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(134, 134, 134);">
@@ -46,7 +43,7 @@
 
     <section class="section-content-block">
         <div class="d-flex justify-content-center align-items-center">
-            <button class='sbtn gradient-btn purple-btn rounded-btn'>Show all users</button>
+            <a href="/user"><button class='sbtn gradient-btn purple-btn rounded-btn'>See Aatmanti's users!</button></a>
         </div>
     </section>
 
@@ -135,8 +132,8 @@
         <div class="row margin-bottom-11" id="vision">
             <div class="text-center">
                 <h2 class="mb-4"><strong>Our Vision</strong></h2>
-                <p>A world where every woman is able to use her voice, make her own decisions, and engage in economic
-                    opportunities.</p>
+                <p>A world where every woman is able to use her voice, make her own decisions, and engage in economic opportunities.
+                </p>
             </div>
         </div>
     </section>
@@ -149,14 +146,12 @@
 
                     <div class="col-lg-5 order-1 mb-5" id="edits">
                         <div class="row justify-content-center align-items-center">
-                            <iframe id="shadow-frame" allowfullscreen height="350" width="350" style="border:none;"
-                                src="https://www.youtube.com/embed/OsoRhfIB-jI"></iframe>
+                            <iframe id="shadow-frame" allowfullscreen height="350" width="350" style="border:none;" src="https://www.youtube.com/embed/OsoRhfIB-jI"></iframe>
                         </div>
                     </div>
                     <div class="col-lg-5 order-2 mb-5" id="edits">
                         <div class="row justify-content-center align-items-center">
-                            <iframe id="shadow-frame" allowfullscreen height="350" width="350" style="border:none;"
-                                src="https://www.youtube.com/embed/bF-TnMxTUTg"></iframe>
+                            <iframe id="shadow-frame" allowfullscreen height="350" width="350" style="border:none;" src="https://www.youtube.com/embed/bF-TnMxTUTg"></iframe>
                         </div>
                     </div>
 
