--- a/views/service.ejs
+++ b/views/service.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header') %>
+<link rel="stylesheet" type="text/css" href="/stylesheets/products.css"></link>
     <style tyep="text/stylesheets">
         body {
             /*background-image: linear-gradient(to top, #cd9cf2 0%, #f6f3ff 100%);*/
@@ -18,6 +19,18 @@
 
                                 <h5 class="card-title mb-3 text-warning">
                                     <%= service.servicename %>
+                                    <fieldset class="rating">
+                                        <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="5 stars"></label>
+                                        <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="4.5 stars"></label>
+                                        <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="4 stars"></label>
+                                        <input type="radio" id="star3half" name="rating" value="3 and a half" /><label class="half" for="star3half" title="3.5 stars"></label>
+                                        <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="3 stars"></label>
+                                        <input type="radio" id="star2half" name="rating" value="2 and a half" /><label class="half" for="star2half" title="2.5 stars"></label>
+                                        <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="2 stars"></label>
+                                        <input type="radio" id="star1half" name="rating" value="1 and a half" /><label class="half" for="star1half" title="1.5 stars"></label>
+                                        <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="1 star"></label>
+                                        <input type="radio" id="starhalf" name="rating" value="half" /><label class="half" for="starhalf" title="0.5 stars"></label>
+                                    </fieldset>
                                 </h5>
                                 <p class="text-muted mb-1">
                                     <%= service.servicetype %>
@@ -36,6 +49,9 @@
                                         </li>
                                         <li>Contact:
                                             <%= service.email %>
+                                        </li>
+                                        <li>rating:
+                                            <span id="random"></span>
                                         </li>
                                     </ul>
                                     <%= service.description %>
@@ -69,6 +85,8 @@
             </div>
         </div>
     </section>
-
+    <script>
+        document.getElementById("random").innerHTML = Math.floor(Math.random() * 10)/2;
+    </script>
 
     <%- include('./partials/footer') %>
