--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Bad Script');
 body {
-    background-image: linear-gradient(to top, #cd9cf2 0%, #f6f3ff 100%);
+    background-image: linear-gradient(to top, #cd9cf2 0%, #d6a8fa 100%);
     /*background-image: linear-gradient(to top, #df89b5 0%, #bfd9fe 100%);*/
 }
 
