--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
+<div style="padding-top: 5rem;"></div>
 <footer class="footer-distributed">
     <div class="footer-left">
         <img class="footlogo" src="/assets/logo.svg">
