Changed ui of products and jobs page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -410,4 +410,10 @@ footer {
     height: 125px;
 }
 
+.bottom-right {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
 /* ===========footer=========== */
