--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,4 +1,8 @@
 <%- include('./partials/header') %>
+<style>body {
+  /*background-image: linear-gradient(to top, #cd9cf2 0%, #f6f3ff 100%);*/
+  background-image: linear-gradient(to top, #cd9cf2 0%, #f6f3ff 100%);
+}</style>
 <div class="container mb-5 pt-5">
     <div class="row mt-5 pt-5 pb-5">
       <div class="col-md-12">
