--- a/views/jobs.ejs
+++ b/views/jobs.ejs
@@ -1,25 +1,192 @@
 <%- include('./partials/header') %>
-    <style tyep="text/stylesheets">
-        body {
-            /*background-image: linear-gradient(to top, #cd9cf2 0%, #f6f3ff 100%);*/
-            background-image: linear-gradient(to top, #df89b5 0%, #bfd9fe 100%);
-        }
-
-    </style>
-    <div style="padding-top: 5rem;">
-        <h1>Find and Post Jobs</h1>
+<link rel="stylesheet" type="text/css" href="/stylesheets/jobs.css">
+    </link>
+        <div class="container">
+        <div id="banner" class="row justify-content-between align-items-center">
+            <div class="col-lg-5" id="descriptive">
+                <div class="contents d-flex flex-column justify-content-around">
+                    <h5 class="mb-4 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4D2768;">Looking for a Job?</h5>
+                    <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
+                        Your Perfect Opportunity Is Here.
+                    </h1>
+                    <h5 class="mb-4 mt-1 font-weight-bold" style="color: #281436;">
+                        Apply for jobs on Aatmaniti and forge a better path for yourself.
+                    </h5>
+                    <div class="mt-1">
+                        <button type="button" class="btn mb-2 btn-primary"><a href="#scroll-target">Find a job</a></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5 mt-3 mt-lg-0" id="illustration">
+                <div class="row justify-content-center align-items-center">
+                    <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-interval="4000" data-pause="false">
+                                <img src="https://youthincmag.com/wp-content/uploads/2019/03/016987154_10100.jpg" class="d-block w-100" alt="Slide1">
+            
+                            </div>
+                            <div class="carousel-item" data-interval="4000" data-pause="false">
+                                <img src="http://bsmedia.business-standard.com/_media/bs/img/article/2017-06/04/full/1496599159-0707.jpg" class="d-block w-100" alt="Slide2">
+                            </div>
+                            <div class="carousel-item" data-interval="4000" data-pause="false">
+                                <img src="https://img.onmanorama.com/content/dam/mm/en/food/dine-around/images/2018/7/17/working-woman-845.jpg" class="d-block w-100" alt="Slide3">                                   
+                                </div>
+                            </div>
+                            <a href="#carouselExampleIndicators" class="carousel-control-prev carousel1-control-prev" role="button"
+                                data-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a href="#carouselExampleIndicators" class="carousel-control-next carousel1-control-next" role="button"
+                                data-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="btn btn-sm btn-danger float-right" href="/jobs/new">
-        Add New Job
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" d="M10.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L12.793 8l-2.647-2.646a.5.5 0 0 1 0-.708z"></path>
-        <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5H13a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 8z"></path>
-    </svg>
+    <div class="container">
+        <div id="banner" class="row justify-content-between align-items-center">
+            <div class="col-lg-5 mt-3 mt-lg-0" id="illustration">
+                <div class="row justify-content-center align-items-center">
+                    <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-interval="4000" data-pause="false">
+                                <img src="https://hiring-assets.careerbuilder.com/media/attachments/careerbuilder-ar_post-64.jpg?1470185432" class="d-block w-100" alt="Slide1">
+            
+                            </div>
+                            <div class="carousel-item" data-interval="4000" data-pause="false">
+                                <img src="https://images.financialexpress.com/2020/07/GettyImages-119825256-620x413.jpg" class="d-block w-100" alt="Slide2">
+                            </div>
+                            <div class="carousel-item" data-interval="4000" data-pause="false">
+                                <img src="https://tatanutrikorner.com/blogs/womens-nutrition/modern-indian-working-woman-and-her-lifestyle" class="d-block w-100" alt="Slide3">
+                            </div>
+                            <a href="#carouselExampleIndicators" class="carousel-control-prev carousel1-control-prev" role="button"
+                                data-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a href="#carouselExampleIndicators" class="carousel-control-next carousel1-control-next" role="button"
+                                data-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5" id="descriptive">
+                <div class="contents d-flex flex-column justify-content-around">
+                    <h5 class="mb-4 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4D2768;">Looking for a female employee?</h5>
+                    <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
+                        Find Employees on AatmaNiti.
+                    </h1>
+                    <h5 class="mb-4 mt-1 font-weight-bold" style="color: #281436;">
+                        We are a community of women looking for career opportunities and wanting to expand their business. 
+                    </h5>
+                    <div class="mt-1">
+                        <button type="button" class="btn mb-2 ml-4 btn-primary">Add New Job</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-<div class="container">
+    <div id="search" class="row">
+        <div class="col-lg-12 card-margin">
+            <div class="card search-form">
+                <div class="card-body p-0">
+                    <form id="search-form">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="row no-gutters">
+                                    <div class="col-lg-3 col-md-3 col-sm-12 p-0">
+                                        <article class="filter-group">
+                                            <header class="card-header"> <a href="#" data-toggle="collapse" data-target="#collapse_aside1" data-abc="true" aria-expanded="false" class="collapsed"> <i class="icon-control fa fa-chevron-down"></i>
+                                                    <h6 class="title">Companies </h6>
+                                                </a> </header>
+                                            <div class="filter-content collapse" id="collapse_aside1" style="">
+                                                <div class="card-body">
+                                                    <ul class="list-menu flex">
+                                                        <li><a id="list" href="#" data-abc="true">JP Morgan Chase </a></li>
+                                                        <li><a id="list" href="#" data-abc="true">Amazon </a></li>
+                                                        <li><a id="list" href="#" data-abc="true">Goldman Sachs </a></li>
+                                                        <li><a id="list" href="#" data-abc="true">Clothes </a></li>
+                                                        <li><a id="list" href="#" data-abc="true">Accessories </a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </article>
+                                        <article class="filter-group">
+                                            <header class="card-header"> <a href="#" data-toggle="collapse" data-target="#collapse_aside2" data-abc="true" aria-expanded="false" class="collapsed"> <i class="icon-control fa fa-chevron-down"></i>
+                                                    <h6 class="title">Price </h6>
+                                                </a> </header>
+                                            <div class="filter-content collapse" id="collapse_aside2" style="">
+                                                <div class="card-body"> <input type="range" class="custom-range" min="0" max="100" name="">
+                                                    <div class="form-row">
+                                                        <div class="form-group col-md-6"> <label id="list">Min</label> <input class="form-control" placeholder="$0" type="number"> </div>
+                                                        <div class="form-group text-right col-md-6"> <label id="list">Max</label> <input class="form-control" placeholder="$1,0000" type="number"> </div>
+                                                    </div> <a href="#" class="highlight-button btn btn-medium button xs-margin-bottom-five" data-abc="true" id="list">Apply Now</a>
+                                                </div>
+                                            </div>
+                                        </article>
+                                        <article class="filter-group">
+                                            <header class="card-header"> <a href="#" data-toggle="collapse" data-target="#collapse_aside3" data-abc="true" aria-expanded="false" class="collapsed"> <i class="icon-control fa fa-chevron-down"></i>
+                                                    <h6 class="title">Size </h6>
+                                                </a> </header>
+                                            <div class="filter-content collapse" id="collapse_aside3" style="">
+                                                <div class="card-body"> <label class="checkbox-btn"> <input type="checkbox"> <span id="list" class="btn btn-light"> XS </span> </label> <label class="checkbox-btn"> <input type="checkbox"> <span class="btn btn-light" id="list"> SM </span> </label> <label class="checkbox-btn"> <input type="checkbox"> <span id="list" class="btn btn-light"> LG </span> </label> <label class="checkbox-btn"> <input type="checkbox"> <span id="list" class="btn btn-light"> XXL </span> </label> <label class="checkbox-btn"> <input type="checkbox"> <span class="btn btn-light" id="list"> XXXL </span> </label> </div>
+                                            </div>
+                                        </article>
+                                        <article class="filter-group">
+                                            <header class="card-header"> <a href="#" data-toggle="collapse" data-target="#collapse_aside4" data-abc="true" class="collapsed" aria-expanded="false"> <i class="icon-control fa fa-chevron-down"></i>
+                                                    <h6 class="title">Rating </h6>
+                                                </a> </header>
+                                            <div class="filter-content collapse" id="collapse_aside4" style="">
+                                                <div class="card-body"> <label class="custom-control"> <input type="checkbox" checked="" class="custom-control-input">
+                                                        <div id="list" class="custom-control-label">Better </div>
+                                                    </label> <label class="custom-control"> <input type="checkbox" checked="" class="custom-control-input">
+                                                        <div id="list" class="custom-control-label">Best </div>
+                                                    </label> <label class="custom-control"> <input type="checkbox" checked="" class="custom-control-input">
+                                                        <div id="list" class="custom-control-label">Good</div>
+                                                    </label> <label class="custom-control"> <input type="checkbox" checked="" class="custom-control-input">
+                                                        <div id="list" class="custom-control-label">Not good</div>
+                                                    </label> </div>
+                                            </div>
+                                        </article>
+                                    </div>
+                                    <div class="col-lg-8 col-md-6 col-sm-12 p-0">
+                                        <input type="text" placeholder="Search..." class="form-control" id="search" name="search">
+                                    </div>
+                                    <div class="col-lg-1 col-md-3 col-sm-12 p-0">
+                                        <button type="submit" class="btn btn-base">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- <div class="container">
     <div class="row">
     <div class="container-fluid mt-100">
-        <div class="row d-flex justify-content-center">
+        <div class="row flex justify-content-center">
             <div class="col-md-4">
                 <div class="card">
                     <article class="filter-group">
@@ -28,7 +195,7 @@
                             </a> </header>
                         <div class="filter-content collapse" id="collapse_aside1" style="">
                             <div class="card-body">
-                                <ul class="list-menu">
+                                <ul class="list-menu flex">
                                     <li><a href="#" data-abc="true">Electronics </a></li>
                                     <li><a href="#" data-abc="true">Watches </a></li>
                                     <li><a href="#" data-abc="true">Laptops </a></li>
@@ -78,8 +245,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container">
+    </div> -->
+    <div id="scroll-target" class="container">
     <section class="h-100">
             <div class="row">
         <div class="container py-5">
