--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
     <title>AatmaNiti</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
     </link>
-
+    <script src="https://kit.fontawesome.com/45ec3c895b.js" crossorigin="anonymous"></script>
     <!--<div>Icons made by <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
 
     <!-- Link to Bootstrap-->
