--- a/views/programsAndEvents.ejs
+++ b/views/programsAndEvents.ejs
@@ -167,13 +167,11 @@
                         <p class="disclaimer">Its mission is to cater to the primary need of shelter, food, clothing, 
                           medical treatment and care of the women in distress and who are without any social and economic support.</p>
                         </div>
-                        <p class="disclaimer">Its mission is to be a single window facilitator for provision of financial services with backward and forward linkages for women in the unorganized sector</p>
-                    </div>
                 </div>
             </li>
 
                   <!-- -----------------------------------------------Fourth Card-------------------------------------------------------- -->
-                <!-- <li class="booking-card" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9jE5QFpZT8vydgBk7_LSQzPL2UjyxKx00sQ&usqp=CAU)">
+                <li class="booking-card" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9jE5QFpZT8vydgBk7_LSQzPL2UjyxKx00sQ&usqp=CAU)">
                     <div class="book-container">
                       <div class="content">
                           <a href="https://wcd.nic.in/schemes/ujjawala-comprehensive-scheme-prevention-trafficking-and-rescue-rehabilitation-and-re" target="_blank"><button class="btn">Visit Website</button></a>
@@ -199,7 +197,7 @@
                         <p class="disclaimer">Its mission is to be a single window facilitator for provision of financial services with backward and forward linkages for women in the unorganized sector</p>
                     </div>
                 </div>
-            </li> -->
+            </li>
             
         </ul>
     </div>
