Added button links

--- a/views/jobs.ejs
+++ b/views/jobs.ejs
@@ -98,7 +98,7 @@
                         We are a community of women looking for career opportunities and wanting to expand their business. 
                     </h5>
                     <div class="mt-1">
-                        <button type="button" class="btn mb-2 ml-4 btn-primary">Add New Job</button>
+                        <a type="button" class="btn mb-2 ml-4 btn-primary" href="./jobs/new">Add New Job</a>
                     </div>
                 </div>
             </div>
