--- a/views/products.ejs
+++ b/views/products.ejs
@@ -14,7 +14,7 @@
                 </h5>
                 <div class="mt-1">
                     <button type="button" class="btn mb-2 btn-primary"><a href="#scroll-target"></a>Buy products</a></button>
-                    <button type="button" class="btn mb-2 ml-4 btn-primary">Sell products</button>
+                    <a type="button" class="btn mb-2 ml-4 btn-primary" href="./products/new">Sell products</a>
                 </div>               
             </div>
            
