--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -9,6 +9,14 @@ body {
     margin-bottom: 5rem;
 }
 
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    background-color: #281436 !important;
+    border: none;
+}
+
+.btn-primary:hover{
+    background-color: #8E4EBC !important;
+}
 
 /* .sticky + .section-content-block {
     padding-top: 10rem;
