--- a/views/service.ejs
+++ b/views/service.ejs
@@ -19,8 +19,8 @@
                     
                 </h5>
                 <div class="mt-1">
-                    <button type="button" class="btn mb-2 btn-primary"><a href="#scroll-target"></a>Buy products</a></button>
-                    <button type="button" class="btn mb-2 ml-4 btn-primary">Sell products</button>
+                    <button type="button" class="btn mb-2 btn-primary"><a href="#scroll-target"></a>Avail Service</a></button>
+                    <a type="button" class="btn mb-2 ml-4 btn-primary" href="./service/new">Add Service</a>
                 </div>               
             </div>
            
@@ -32,8 +32,8 @@
         </div>
         </div>
         </div>   
-         <section class="h-100">
-        <div class="container py-5">
+     <section class="h-100">
+        <div id="scroll-target" class="container py-5">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <% services.forEach(function(service){ %>
                     <div class="col">
@@ -41,7 +41,7 @@
                             <img src="<%= service.image %>" class="card-img-top" alt="Image Card laceholder">
                             <div class="card-body d-flex flex-column">
 
-                                <h5 class="card-title mb-3 text-warning">
+                                <h5 class="card-title mb-3 d-flex justify-content-between text-warning">
                                     <%= service.servicename %>
                                     <fieldset class="rating">
                                         <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="5 stars"></label>
