stuffs man stuffs!

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,12 +10,13 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-5" id="descriptive">
                     <div class="contents d-flex flex-column justify-content-around">
-                        <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What business are you?</h5>
+                        <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">Still stuck for being financially indipendent?</h5>
                         <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
-                            Main hero message to sell yourself
+                            AatmaNiti is the right place to start for it!
                         </h1>
-                        <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(134, 134, 134);">
-                            Sub hero message lead. How would you benefit the customer. Short and crisp.
+                        <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(38, 26, 70);">
+                            This is a place where u can find a job, sell your products and even display your business or GruhaUdyog Card!
+                            <br><br> One can find a employee to to any find of job, sell their handmade crafts, cloths,eatables and what not!
                         </h5>
                         <div class="mt-1">
                             <button type="button" class="btn mb-2 btn-primary">Find a job</button>
@@ -95,7 +96,7 @@
             <div class="box">
                 <div class="content">
                     <img src="/assets/quotePic.png" alt="" class="quote_pic">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam atque animi delectus vel officiis quo aspernatur, ad optio, hic, possimus eos nostrum magni ullam deleniti? Nesciunt incidunt sunt commodi.</p>
+                    <p>Hey all! I am a housewife and now a run a buiness along with my colony friends. We make handicrafts, creative cards, gifts and many like such. AatmaNiti provided us a great platform to showcase our products and sell then well!</p>
                     <img src="/assets/user1.jpg" width="80px" height="80px" alt="" class="user">
                     <h3>Jyoti Verma</h3>
                 </div>
@@ -103,7 +104,7 @@
             <div class="box">
                 <div class="content">
                     <img src="/assets/quotePic.png" alt="" class="quote_pic">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam atque animi delectus vel officiis quo aspernatur, ad optio, hic, possimus eos nostrum magni ullam deleniti? Nesciunt incidunt sunt commodi.</p>
+                    <p>I was jobless since 2 years after my first prgnancy. I was wasn't able to find a job nearby, so that I would be able to look after my home and work as well. AatmaNiti's Job portal helped me to get the right job.</p>
                     <img src="/assets/user2.jpg" width="80px" height="80px" alt="" class="user">
                     <h3>Shakshi Malik</h3>
                 </div>
@@ -111,7 +112,8 @@
             <div class="box">
                 <div class="content">
                     <img src="/assets/quotePic.png" alt="" class="quote_pic">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam atque animi delectus vel officiis quo aspernatur, ad optio, hic, possimus eos nostrum magni ullam deleniti? Nesciunt incidunt sunt commodi.</p>
+                    <p>Hello! In last years lockdowm I learned to make cakes and cookies and loveed making it soo much so i though to continue this professionaly, and to make it some succesful AatmaNiti provied me a platform to do this! am very thankful
+                        to it!</p>
                     <img src="/assets/user3.jpg" width="80px" height="80px" alt="" class="user">
                     <h3>Zoe Benny</h3>
                 </div>
