--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,13 +2,14 @@
 <footer class="footer-distributed">
     <div class="footer-left">
         <img class="footlogo" src="/assets/logo.svg">
-        <h3>AatmaNiti<span> The tag line goes here</span></h3>
+        <h3>AatmaNiti<span> Making the Indian Womens Swawlambi</span></h3>
 
         <p class="footer-links">
             <a href="#">Home</a> |
             <a href="#">Programs and Events</a> |
             <a href="#">Job Portal</a> |
-            <a href="#">Buy or Sell</a>
+            <a href="#">Buy or Sell</a>|
+            <a href="#">business and Services</a>
         </p>
 
         <p class="footer-company-name">© 2021 AatmaNiti Non-Profit Organisation, India</p>
