--- a/views/programsAndEvents.ejs
+++ b/views/programsAndEvents.ejs
@@ -15,12 +15,12 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-lg-5" id="descriptive">
                             <div class="contents d-flex flex-column justify-content-around">
-                                <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">What business are you?</h5>
+                                <h5 class="mb-4" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">Programs that bring smile on someones face!</h5>
                                 <h1 class="mb-4 mt-2 font-weight-bold" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: black;">
-                                    Main hero message to sell yourself
+                                    Mothers are now being HERO for thieir daughters....
                                 </h1>
-                                <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(134, 134, 134);">
-                                    Sub hero message lead. How would you benefit the customer. Short and crisp.
+                                <h5 class="mb-4 mt-1 font-weight-normal" style="color: rgb(38, 26, 70);">
+                                    Indian Government, many companies and NGO's provides many programs and schemes for Indian womens who wish to make themself financially self sufficient....<br><br>scroll down and find such for you!
                                 </h5>
                             </div>
                         </div>
@@ -117,63 +117,61 @@
                 </div>
             </li>
 
-                <!-- -----------------------------------------------Second Card-------------------------------------------------------- -->
-                <li class="booking-card" style="background-image: url(https://www.jagranimages.com/images/newimg/18022020/18_02_2020-sukanya_20041181.jpg)">
-                    <div class="book-container">
-                      <div class="content">
-                          <a href="https://wcd.nic.in/bbbp-schemes" target="_blank"><button class="btn">Visit Website</button></a>
-                      </div>
+            <!-- -----------------------------------------------Second Card-------------------------------------------------------- -->
+            <li class="booking-card" style="background-image: url(https://www.jagranimages.com/images/newimg/18022020/18_02_2020-sukanya_20041181.jpg)">
+                <div class="book-container">
+                    <div class="content">
+                        <a href="https://wcd.nic.in/bbbp-schemes" target="_blank"><button class="btn">Visit Website</button></a>
                     </div>
-                    <div class="informations-container">
-                      <h2 class="title">Beti Bachao Beti Padhao</h2>
-                      <p class="sub-title">It aims at prevention of gender biased sex selective elimination</p>
-                      <div class="more-information">
+                </div>
+                <div class="informations-container">
+                    <h2 class="title">Beti Bachao Beti Padhao</h2>
+                    <p class="sub-title">It aims at prevention of gender biased sex selective elimination</p>
+                    <div class="more-information">
                         <div class="info-and-date-container">
-                          <div class="box info">
-                              <i class="fa fa-check-circle" aria-hidden="true"></i>
-                            <p>Govenment Program</p>
-                          </div>
-                          <div class="box date">
-                              <i class="fa fa-calendar" aria-hidden="true"></i>
-                            <p>Since January 2015</p>
-                          </div>
+                            <div class="box info">
+                                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                                <p>Govenment Program</p>
+                            </div>
+                            <div class="box date">
+                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                <p>Since January 2015</p>
+                            </div>
                         </div>
-                        <p class="disclaimer">Its mission is to ensure survival & protection of the girl child
-                          It also aims at ensuring education and participation of the girl child</p>
-                        </div>
-                      </div>
-                  </li>
-                  <!-- -----------------------------------------------Third Card-------------------------------------------------------- -->
-                <li class="booking-card" style="background-image: url(https://www.edristi.in/wp-content/uploads/2015/10/swadhar.jpg)">
-                    <div class="book-container">
-                      <div class="content">
-                          <a href="https://www.india.gov.in/spotlight/swadhar-greh-scheme" target="_blank"><button class="btn">Visit Website</button></a>
-                      </div>
-                    </div>
-                    <div class="informations-container">
-                      <h2 class="title">Swadhar Greh</h2>
-                      <p class="sub-title">A Scheme for Women in Difficult Circumstances</p>
-                      <div class="more-information">
-                        <div class="info-and-date-container">
-                          <div class="box info">
-                              <i class="fa fa-check-circle" aria-hidden="true"></i>
-                            <p>Govenment Program</p>
-                          </div>
-                          <div class="box date">
-                              <i class="fa fa-calendar" aria-hidden="true"></i>
-                            <p>Since June 2010</p>
-                          </div>
-                        </div>
-                        <p class="disclaimer">Its mission is to cater to the primary need of shelter, food, clothing, 
-                          medical treatment and care of the women in distress and who are without any social and economic support.</p>
-                        </div>
-                        <p class="disclaimer">Its mission is to be a single window facilitator for provision of financial services with backward and forward linkages for women in the unorganized sector</p>
+                        <p class="disclaimer">Its mission is to ensure survival & protection of the girl child It also aims at ensuring education and participation of the girl child</p>
                     </div>
                 </div>
             </li>
+            <!-- -----------------------------------------------Third Card-------------------------------------------------------- -->
+            <li class="booking-card" style="background-image: url(https://www.edristi.in/wp-content/uploads/2015/10/swadhar.jpg)">
+                <div class="book-container">
+                    <div class="content">
+                        <a href="https://www.india.gov.in/spotlight/swadhar-greh-scheme" target="_blank"><button class="btn">Visit Website</button></a>
+                    </div>
+                </div>
+                <div class="informations-container">
+                    <h2 class="title">Swadhar Greh</h2>
+                    <p class="sub-title">A Scheme for Women in Difficult Circumstances</p>
+                    <div class="more-information">
+                        <div class="info-and-date-container">
+                            <div class="box info">
+                                <i class="fa fa-check-circle" aria-hidden="true"></i>
+                                <p>Govenment Program</p>
+                            </div>
+                            <div class="box date">
+                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                <p>Since June 2010</p>
+                            </div>
+                        </div>
+                        <p class="disclaimer">Its mission is to cater to the primary need of shelter, food, clothing, medical treatment and care of the women in distress and who are without any social and economic support.</p>
+                    </div>
+                    <p class="disclaimer">Its mission is to be a single window facilitator for provision of financial services with backward and forward linkages for women in the unorganized sector</p>
+                </div>
+    </div>
+    </li>
 
-                  <!-- -----------------------------------------------Fourth Card-------------------------------------------------------- -->
-                <!-- <li class="booking-card" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9jE5QFpZT8vydgBk7_LSQzPL2UjyxKx00sQ&usqp=CAU)">
+    <!-- -----------------------------------------------Fourth Card-------------------------------------------------------- -->
+    <!-- <li class="booking-card" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9jE5QFpZT8vydgBk7_LSQzPL2UjyxKx00sQ&usqp=CAU)">
                     <div class="book-container">
                       <div class="content">
                           <a href="https://wcd.nic.in/schemes/ujjawala-comprehensive-scheme-prevention-trafficking-and-rescue-rehabilitation-and-re" target="_blank"><button class="btn">Visit Website</button></a>
@@ -200,28 +198,28 @@
                     </div>
                 </div>
             </li> -->
-            
-        </ul>
+
+    </ul>
     </div>
     <!------------------------------------------------Programs page ends here --------------------------------------------------------------- -->
     <!-- ---------------------------------------------Events page begins here --------------------------------------------------------------- -->
     <div id="Events" class="tabcontent">
         <ul>
             <!-- -------------------------------------------Fisrt Card------------------------------------------------------------------ -->
-            <li class="booking-card" style="background-image: url(https://i.pinimg.com/236x/f1/3c/c8/f13cc814cdd75ea305a83c2f9f6672a1.jpg)">
+            <li class="booking-card" style="background-image: url(https://w.ndtvimg.com/domain/3/2017/02/28151153/Sanitary-Pads-With-A-Difference-How-Project-Baala-Is-Empowering-Rural-Women-3.jpg)">
                 <div class="book-container">
                     <div class="content">
                         <a href="https://rmk.nic.in/" target="_blank"><button class="btn">Visit Website</button></a>
                     </div>
                 </div>
                 <div class="informations-container">
-                    <h2 class="title">Rashtriya Mahila Kosh</h2>
-                    <p class="sub-title">A national level organization for socio-economic empowerment of women</p>
+                    <h2 class="title">Sanitary Pads awareness programe</h2>
+                    <p class="sub-title">A program on 12th march to make rural womens aware of usage of sanitary pads</p>
                     <div class="more-information">
                         <div class="info-and-date-container">
                             <div class="box info">
                                 <i class="fa fa-check-circle" aria-hidden="true"></i>
-                                <p>Govenment Program</p>
+                                <p>A AatmaNiti Program</p>
                             </div>
                             <div class="box date">
                                 <i class="fa fa-calendar" aria-hidden="true"></i>
@@ -234,15 +232,15 @@
             </li>
 
             <!-- -----------------------------------------------Second Card-------------------------------------------------------- -->
-            <li class="booking-card" style="background-image: url(https://i.pinimg.com/236x/f1/3c/c8/f13cc814cdd75ea305a83c2f9f6672a1.jpg)">
+            <li class="booking-card" style="background-image: url(http://blogs.und.edu/uletter/wp-content/uploads/sites/49/UND-WEP-FLYER.png)">
                 <div class="book-container">
                     <div class="content">
                         <a href="https://rmk.nic.in/" target="_blank"><button class="btn">Visit Website</button></a>
                     </div>
                 </div>
                 <div class="informations-container">
-                    <h2 class="title">Rashtriya Mahila Kosh</h2>
-                    <p class="sub-title">A national level organization for socio-economic empowerment of women</p>
+                    <h2 class="title">Enterpreneurship Programme</h2>
+                    <p class="sub-title">A national level program to help women build their own buisness</p>
                     <div class="more-information">
                         <div class="info-and-date-container">
                             <div class="box info">
@@ -258,8 +256,8 @@
                     </div>
                 </div>
             </li>
-          </ul>
-            
+        </ul>
+
     </div>
 
     <script>
